# menu_opt

./: .gitignore  ILP.ipynb  README.md  app.py  menu.csv  problem.py  pyproject.toml  requirements.txt  scraiping.py
.ipynb_checkpoints/: menu-checkpoint.csv
api/: main.py
api/model/: cbc_model.py  dataclass.py  make_input_data.py
api/routers/: opt_menu.py  optimize_router.py
api/schemas/: api_schemas.py  opt_schemas.py
api/scripts/: run_optimize.py
app/: app.py
data/: famille.csv  kansita.csv  kasane.csv  rainbow.csv
notebook/: ILP_naive.ipynb  ILP_slack.ipynb
